demo-deployment/primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo-primary
  labels:
    app: rancher-demo-primary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rancher-demo-primary
  template:
    metadata:
      labels:
        app: rancher-demo-primary
    spec:
      containers:
      - name: rancher-demo-primary
        image: audiazzura23/rancher-demo
        ports:
        - containerPort: 80
