demo-deployment/secondary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-secondary
  labels:
    app: rancher-demo-secondary
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: rancher-demo-secondary
